--- a/src/css/core.navbar.css
+++ b/src/css/core.navbar.css
@@ -1,125 +1,134 @@
 /*
  * Navigation bar
  */
+
 body.menu-active #wrapper {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 
 nav .brand-logo {
-    /*
+  /*
     background: url(../img/icon-128.png) no-repeat left center;
     background-size: 28px;
     padding-left: 33px;
     margin-left: 72px;
     */
-    display: none;
-    position: static;
-    font-size: 20px;
+  display: none;
+  position: static;
+  font-size: 20px;
 }
+
 .page-title {
-    line-height: 32px;
-    font-size: 20px;
+  line-height: 32px;
+  font-size: 20px;
 }
-nav .brand-logo,
-.page-title {
-    color: #fff;
+
+nav .brand-logo, .page-title {
+  color: #fff;
 }
 
 nav.main-nav ul a {
-    color: rgba(255,255,255,.84);
+  color: rgba(255, 255, 255, .84);
 }
 
 nav a.button-collapse {
-    opacity: 0.75;
-    padding: 16px 20px;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    color: #ffffff;
+  opacity: 0.75;
+  padding: 16px 20px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  color: #ffffff;
 }
 
 nav a.button-collapse i {
-    height: 20px;
-    line-height: 26px;
-    font-size: 1.8em;
+  height: 20px;
+  line-height: 26px;
+  font-size: 1.8em;
 }
 
 .side-nav {
-    top: 56px;
+  top: 56px;
 }
 
 .side-nav .collapsible-header {
-    margin: 0;
+  margin: 0;
 }
 
 .side-nav .collapsible-body {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .side-nav .collapsible-body li a {
-    margin: 0;
-    border-left: 16px solid transparent;
+  margin: 0;
+  border-left: 16px solid transparent;
 }
 
 .side-nav li {
-    padding: 0;
+  padding: 0;
 }
 
 .side-nav li a {
-    padding: 0 12px 0 20px;
+  padding: 0 12px 0 20px;
 }
 
 #sidenav-overlay {
-    display: none;
+  display: none;
 }
 
 @media only screen and (max-width: 992px) {
-    nav .brand-logo {
-        left: auto;
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-    }
+  nav .brand-logo {
+    left: auto;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
 }
+
 @media only screen and (min-width: 601px) {
-    nav .brand-logo {
-        display: inline-block;
-    }
-    .page-title {
-        border-left: 1px solid rgba(255,255,255,0.2);
-        padding-left: 24px;
-        margin-left: 24px;
-        font-size: 20px;
-    }
-    .main-nav {
-        margin-right: 16px;
-    }
-    .side-nav {
-        top: 64px;
-    }
-    nav a.button-collapse {
-        padding: 16px 24px;
-    }
-    nav a.button-collapse i {
-        height: 24px;
-        line-height: 32px;
-    }
+  nav .brand-logo {
+    display: inline-block;
+  }
+  .page-title {
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 0 12px;
+    margin-left: 12px;
+    font-size: 20px;
+  }
+  .main-nav {
+    margin-right: 16px;
+  }
+  .side-nav {
+    top: 64px;
+  }
+  nav a.button-collapse {
+    padding: 16px 24px;
+  }
+  nav a.button-collapse i {
+    height: 24px;
+    line-height: 32px;
+  }
 }
+
 @media only screen and (min-width: 993px) {
-    body.menu-active #wrapper {
-        padding-left: 240px;
-    }
-    .side-nav {
-        background-color: transparent;
-        padding-top: 16px;
-        height: 100%;
-        height: calc(100%);
-        height: -moz-calc(100%);
-    }
-    .side-nav.collapsible {
-        box-shadow: none;
-        border: 0;
-    }
-    .side-nav .collapsible-body {
-        background-color: #fafafa;
-    }
- }
+  body.menu-active #wrapper {
+    padding-left: 240px;
+  }
+  .side-nav {
+    background-color: transparent;
+    padding-top: 16px;
+    height: 100%;
+    height: calc(100%);
+    height: -moz-calc(100%);
+  }
+  .side-nav.collapsible {
+    box-shadow: none;
+    border: 0;
+    padding: 16px 8px;
+    width: 220px;
+  }
+  .side-nav .collapsible-body {
+    background-color: #fafafa;
+  }
+  .side-nav li.active, .side-nav li>a:hover {
+    border-radius: 2px;
+  }
+}
