--- a/src/css/zmedia.css
+++ b/src/css/zmedia.css
@@ -1,71 +1,67 @@
-/*
 @media only screen and (min-width: 993px) {
-    .material nav {
-        background-color: transparent !important;
-        color: rgba(0,0,0,0.87);
-        box-shadow: none;
-    }
-    .material nav .brand-logo,
-    .material nav ul.main-nav a {
-        color: rgba(0,0,0,0.87);
-    }
+  nav .brand-logo {
+    margin-left: 24px;
+  }
 }
-*/
 
 @media (min-width: 768px) {
-    /*
+  /*
     .material nav .brand-logo {
         padding-left: 30px;
     }
     */
-    #hint {
-        display: block;
-    }
+  #hint {
+    display: block;
+  }
 }
+
 @media (max-width: 1199px) {
-    #ct-weekdays .ct-series .ct-bar {
-        stroke-width: 30px;
-    }
+  #ct-weekdays .ct-series .ct-bar {
+    stroke-width: 30px;
+  }
 }
+
 @media (max-width: 991px) {
-    #ct-weekdays .ct-series .ct-bar {
-        stroke-width: 40px;
-    }
+  #ct-weekdays .ct-series .ct-bar {
+    stroke-width: 40px;
+  }
 }
+
 @media (max-width: 768px) {
-    .material nav {
-        background-color: #3F51B5;
-        color: rgba(255,255,255,0.84);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    }
-    #active-game > span,
-    #results-button > span,
-    #config-button > span {
-        display: inline;
-    }
-    #stats-weekdays {
-        display: block;
-        position: initial;
-    }
-    #stats-categories {
-        display: block;
-    }
+  .material nav {
+    background-color: #0d47a1;
+    color: rgba(255, 255, 255, 0.84);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+  #active-game>span, #results-button>span, #config-button>span {
+    display: inline;
+  }
+  #stats-weekdays {
+    display: block;
+    position: initial;
+  }
+  #stats-categories {
+    display: block;
+  }
 }
+
 @media (max-width: 420px) {
-    #timer-display {
-        font-size: 84px;
-    }
-	.ct-major-twelfth::before {
-		padding-bottom: 66.6666%;
-	}
+  #timer-display {
+    font-size: 84px;
+  }
+  .ct-major-twelfth::before {
+    padding-bottom: 66.6666%;
+  }
 }
+
 @media (max-width: 380px) {
-    #timer-display {
-        font-size: 72px;
-    }
+  #timer-display {
+    font-size: 72px;
+  }
 }
+
 @media (max-width: 340px) {
-    #timer-display {
-        font-size: 64px;
-    }
+  #timer-display {
+    font-size: 64px;
+  }
 }
